# Thinking-Coach

./: .gitignore  SKILL.md  pyproject.toml
docs/: Technical Architecture.md  Thinking-Coach PRD v1.0.md
examples/: debate-example.md  reflection-example.md
rules/: memory.md  stage-transition.md  topic-change.md  viewpoint-change.md
src/thinking_coach/: __init__.py  cli.py  config.py
src/thinking_coach/llm/: __init__.py  base.py  fake.py  openai_client.py  validator.py
src/thinking_coach/memory/: __init__.py  manager.py
src/thinking_coach/models/: __init__.py  core.py
src/thinking_coach/persistence/: __init__.py  repository.py
src/thinking_coach/rule_engine/: __init__.py  engine.py
src/thinking_coach/runtime/: __init__.py  controller.py
src/thinking_coach/state/: __init__.py  machine.py  manager.py
src/thinking_coach/workflow_engine/: __init__.py  registry.py
tests/: README.md
tests/scenarios/: test_advanced_lifecycle.py  test_complete_session.py
tests/unit/: test_llm_validation.py  test_memory_boundary.py  test_runtime_skeleton.py  test_state_and_rules.py
tests/workflow/: test_handler_boundaries.py
workflows/: argument refinement.md  argument-building.md  argument-refinement.md  closing-statement.md  debate.md  definition.md  reflection.md
