[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "thinking-coach"
version = "0.1.0"
description = "Thinking Coach Agent Runtime Prototype"
requires-python = ">=3.12"
dependencies = [
  "openai>=1.0,<2.0",
  "pydantic>=2.0,<3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9.0"]

[project.scripts]
thinking-coach = "thinking_coach.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
